test/spec_vectors/exports/ok/module_9.wat
(module (export "a" (func 0)) (func))