test/spec_vectors/exports/fail/module_15.wat
(module (export "a" (func 0)))